# oj_master_v3_full_stack

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py
backend/app/core/config/: __init__.py  config.toml  config_manage.py  settings.toml
backend/app/core/models/api/: __init__.py
backend/app/core/models/db_models/: __init__.py
backend/app/core/routers/: __init__.py
backend/app/core/services/: __init__.py
backend/app/utils/: __init__.py  database.py  db_util.py  init_util.py  logger_util.py
backend/app/utils/logs/: __init__.py
backend/test/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
